--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,12 +23,10 @@ services:
     ports:
       - "8080:3000"
     restart: unless-stopped
-    volumes:
-      - .:/app
-      - node_modules:/app/node_modules
     command: npm run start
     profiles:
       - prod
+    # ❌ No volumes in prod (avoids overwriting .next folder)
 
 volumes:
   node_modules:
