--- a/package.json
+++ b/package.json
@@ -9,69 +9,69 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emailjs/browser": "^4.4.1",
-    "@emotion/is-prop-valid": "1.3.1",
-    "@hookform/resolvers": "3.9.1",
-    "@radix-ui/react-accordion": "1.2.1",
-    "@radix-ui/react-alert-dialog": "1.1.2",
-    "@radix-ui/react-aspect-ratio": "1.1.0",
-    "@radix-ui/react-avatar": "1.1.1",
-    "@radix-ui/react-checkbox": "1.1.2",
-    "@radix-ui/react-collapsible": "1.1.1",
-    "@radix-ui/react-context-menu": "2.2.2",
-    "@radix-ui/react-dialog": "1.1.2",
-    "@radix-ui/react-dropdown-menu": "2.1.2",
-    "@radix-ui/react-hover-card": "1.1.2",
-    "@radix-ui/react-label": "2.1.0",
-    "@radix-ui/react-menubar": "1.1.2",
-    "@radix-ui/react-navigation-menu": "1.2.1",
-    "@radix-ui/react-popover": "1.1.2",
-    "@radix-ui/react-progress": "1.1.0",
-    "@radix-ui/react-radio-group": "1.2.1",
-    "@radix-ui/react-scroll-area": "1.2.0",
-    "@radix-ui/react-select": "2.1.3",
-    "@radix-ui/react-separator": "1.1.0",
-    "@radix-ui/react-slider": "1.2.1",
-    "@radix-ui/react-slot": "1.1.0",
-    "@radix-ui/react-switch": "1.1.1",
-    "@radix-ui/react-tabs": "1.1.1",
-    "@radix-ui/react-toast": "1.2.2",
-    "@radix-ui/react-toggle": "1.1.0",
-    "@radix-ui/react-toggle-group": "1.1.0",
-    "@radix-ui/react-tooltip": "1.1.3",
-    "@react-three/drei": "9.105.6",
-    "@react-three/fiber": "8.16.8",
-    "autoprefixer": "10.4.20",
-    "class-variance-authority": "0.7.1",
-    "clsx": "2.1.1",
-    "cmdk": "1.0.2",
+    "@emotion/is-prop-valid": "latest",
+    "@hookform/resolvers": "^3.9.1",
+    "@radix-ui/react-accordion": "latest",
+    "@radix-ui/react-alert-dialog": "latest",
+    "@radix-ui/react-aspect-ratio": "latest",
+    "@radix-ui/react-avatar": "latest",
+    "@radix-ui/react-checkbox": "latest",
+    "@radix-ui/react-collapsible": "latest",
+    "@radix-ui/react-context-menu": "latest",
+    "@radix-ui/react-dialog": "latest",
+    "@radix-ui/react-dropdown-menu": "latest",
+    "@radix-ui/react-hover-card": "latest",
+    "@radix-ui/react-label": "latest",
+    "@radix-ui/react-menubar": "latest",
+    "@radix-ui/react-navigation-menu": "latest",
+    "@radix-ui/react-popover": "latest",
+    "@radix-ui/react-progress": "latest",
+    "@radix-ui/react-radio-group": "latest",
+    "@radix-ui/react-scroll-area": "latest",
+    "@radix-ui/react-select": "latest",
+    "@radix-ui/react-separator": "latest",
+    "@radix-ui/react-slider": "latest",
+    "@radix-ui/react-slot": "latest",
+    "@radix-ui/react-switch": "latest",
+    "@radix-ui/react-tabs": "latest",
+    "@radix-ui/react-toast": "latest",
+    "@radix-ui/react-toggle": "latest",
+    "@radix-ui/react-toggle-group": "latest",
+    "@radix-ui/react-tooltip": "latest",
+    "@react-three/drei": "latest",
+    "@react-three/fiber": "latest",
+    "autoprefixer": "^10.4.20",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "latest",
     "date-fns": "4.1.0",
-    "embla-carousel-react": "8.3.0",
-    "framer-motion": "12.9.3",
-    "input-otp": "1.4.1",
-    "lucide-react": "0.454.0",
-    "next": "14.2.15",
-    "next-themes": "0.3.0",
-    "react": "18.2.0",
-    "react-day-picker": "9.6.6",
-    "react-dom": "18.2.0",
-    "react-hook-form": "7.53.1",
-    "react-parallax-tilt": "1.7.246",
-    "react-resizable-panels": "2.1.5",
-    "recharts": "2.12.7",
-    "sonner": "1.7.0",
-    "tailwind-merge": "2.5.5",
-    "tailwindcss-animate": "1.0.7",
-    "three": "0.169.0",
-    "vaul": "1.1.0",
-    "zod": "3.24.1"
+    "@emailjs/browser": "^4.4.1",
+    "embla-carousel-react": "latest",
+    "framer-motion": "latest",
+    "input-otp": "latest",
+    "lucide-react": "^0.454.0",
+    "next": "15.2.4",
+    "next-themes": "latest",
+    "react": "^19",
+    "react-day-picker": "latest",
+    "react-dom": "^19",
+    "react-hook-form": "latest",
+    "react-parallax-tilt": "latest",
+    "react-resizable-panels": "latest",
+    "recharts": "latest",
+    "sonner": "latest",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7",
+    "three": "latest",
+    "vaul": "latest",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@types/node": "22.7.9",
-    "@types/react": "18.2.79",
-    "@types/react-dom": "18.2.25",
-    "postcss": "8.4.47",
-    "tailwindcss": "3.4.17",
-    "typescript": "5.6.3"
+    "@types/node": "^22",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.3",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5"
   }
 }
