--- a/package.json
+++ b/package.json
@@ -45,13 +45,14 @@
     "clsx": "^2.1.1",
     "cmdk": "latest",
     "date-fns": "4.1.0",
-    "@emailjs/browser": "^4.4.1",
     "embla-carousel-react": "latest",
+    "formidable-serverless": "^1.1.1",
     "framer-motion": "latest",
     "input-otp": "latest",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "latest",
+    "nodemailer": "^7.0.6",
     "react": "^19",
     "react-day-picker": "latest",
     "react-dom": "^19",
